tests/snapshots/examples_basics/either_and_option.snap
---
source: tests/examples_basics_snapshots.rs
---
Fixture: examples/basics/either_and_option.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/either_and_option.flx:23:1
   |
23 | print(findInArray(numbers, 30));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | -------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/basics/either_and_option.flx:23:1
   |
23 | print(findInArray(numbers, 30));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | -------------------------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/either_and_option.flx:24:1
   |
24 | print(findInArray(numbers, 99));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | -------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/either_and_option.flx:39:1
   |
39 | print(validateAge(25));
   | ^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/either_and_option.flx:40:1
   |
40 | print(validateAge(-5));
   | ^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/either_and_option.flx:41:1
   |
41 | print(validateAge(200));
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/either_and_option.flx:55:1
   |
55 | print(optionToEither(found, "not found"));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/either_and_option.flx:56:1
   |
56 | print(optionToEither(notFound, "not found"));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | --------------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/either_and_option.flx:67:1
   |
67 | print(eitherToOption(Right(42)));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | --------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/either_and_option.flx:68:1
   |
68 | print(eitherToOption(Left("some error")));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/either_and_option.flx:78:1
   |
78 | print(getOrElse(Right(100), 0));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | -------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/either_and_option.flx:79:1
   |
79 | print(getOrElse(Left("error"), 0));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/either_and_option.flx:91:1
   |
91 | print(doubled);
   | ^^^^^^^^^^^^^^^
   | --------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/either_and_option.flx:94:1
   |
94 | print(failed);
   | ^^^^^^^^^^^^^^
   | -------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.

Found 14 errors.
== stdout ==
<not executed>
